# drm_arch_app

./: .gitignore  README.en.md  README.md  README.zh-CN.md  build-sdcard-arch.sh  build_drm_arch_app.sh  build_lvgl.sh  build_python311.sh
deploy/etc/: vimrc
deploy/etc/profile.d/: epass-term.sh
deploy/etc/sysctl.d/: swap.conf
deploy/etc/systemd/: journald.conf
deploy/etc/systemd/system/: drm-arch-app.service  drop-cache.service  drop-cache.timer  epass-boot-animation.service  epass-data-mount.service  epass-firstboot-select.service  epass-gui-fallback.service  epass-gui-ready.path  epass-stop-boot-animation.service  epass-swapfile-setup.service  epass-usb-mode.service  fake-hwclock-load.service  fake-hwclock-save.service  screen-detect.service  usb-mtp.service  usb-rndis.service  zram-swap.service
deploy/etc/systemd/system/serial-getty@ttyS0.service.d/: epass-fixed-local.conf
deploy/etc/systemd/system/sshdgenkeys.service.d/: epass-start-after-gui.conf
deploy/etc/systemd/system/systemd-logind.service.d/: epass-kernel54-compat.conf
deploy/etc/umtprd/: umtprd.conf
drm_arch_app/: .gitignore  CMakeLists.txt  README.md
drm_arch_app/docs/: application_structure.md  overlay_dev_note.md
drm_arch_app/generated_ui/: actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_font_bebas_40.c  ui_font_bebas_bold_10.c  ui_font_bebas_bold_72.c  ui_font_fontawesome.c  ui_image_oplogo.c  ui_image_prts.c  vars.h
drm_arch_app/src/: config.h  lv_conf.h  main.c
drm_arch_app/src/apps/: apps.c  apps.h  apps_cfg_parse.c  apps_cfg_parse.h  apps_importer.c  apps_importer.h  apps_types.h  extmap.c  extmap.h  ipc_common.c  ipc_common.h  ipc_handler.c  ipc_handler.h  ipc_server.c  ipc_server.h
drm_arch_app/src/driver/: drm_warpper.c  drm_warpper.h  key_enc_evdev.c  key_enc_evdev.h  srgn_drm.h
drm_arch_app/src/overlay/: opinfo.c  opinfo.h  overlay.c  overlay.h  transitions.c  transitions.h
drm_arch_app/src/prts/: operators.c  operators.h  prts.c  prts.h
drm_arch_app/src/render/: animation_driver.c  animation_driver.h  fbdraw.c  fbdraw.h  layer_animation.c  layer_animation.h  lvgl_drm_warp.c  lvgl_drm_warp.h  mediaplayer.c  mediaplayer.h
drm_arch_app/src/ui/: actions_apps.c  actions_apps.h  actions_confirm.c  actions_confirm.h  actions_displayimg.c  actions_displayimg.h  actions_mainscreen.c  actions_mainscreen.h  actions_oplist.c  actions_oplist.h  actions_settings.c  actions_settings.h  actions_sysinfo.c  actions_sysinfo.h  actions_sysinfo2.c  actions_warning.c  actions_warning.h  battery.c  battery.h  filemanager.c  filemanager.h  ipc_helper.c  ipc_helper.h  scr_transition.c  scr_transition.h  shell_net.c  shell_net.h
drm_arch_app/src/utils/: cacheassets.c  cacheassets.h  code128.c  code128.h  log.c  misc.c  misc.h  settings.c  settings.h  spsc_queue.c  spsc_queue.h  theme.c  theme.h  timer.c  timer.h  uuid.c
ui_design/epass_eez/: README.md  epass.eez-project-ui-state
ui_design/epass_eez/font_generate/: .gitignore  README.md  common_char.txt  generate_charlist.py
ui_design/epass_eez/icon_header_gen/: README.md  genheader.py
